my profile page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
   <div class="card">
     <p>
-      Simple guy, love reading, sports, and cats. Looking to gain skills that allows me to work remotly and connect the legal and tech world together.
+      Simple guy, love reading, sports, and cats. Looking to gain skills that allows me to work remotely and connect the legal and tech worlds.
     </p>
     <button><a href="https://www.pexels.com/search/cat/" target="_blank">Thanks for checking, here you can find cats</a></button>
   </div>
